# airflow_demo

./: .env  .gitignore  Makefile  README.md  database_dump.sql  docker-compose-airflow.yaml  docker-compose.yaml  operators_example.py  pyproject.toml  requirements.txt
config/: airflow.cfg
dags/: test_movie_etl.py  test_retry.py  test_simple-2.py  test_simple.py
dags/helpers/: es_schema.py
django_admin/: pyproject.toml
django_admin/api/: urls.py
django_admin/api/v1/: serializers.py  urls.py  view_alt.py  views.py
django_admin/config/: paginators.py  urls.py
django_admin/config/settings/: base.py
django_admin/movies/: admin.py  models.py
django_admin/movies/locale/ru/LC_MESSAGES/: django.mo  django.po
django_admin/movies/migrations/: 0001_initial.py  0002_update_existing_tables_to_fit_movies_models.py  0003_updated_add_field_to_every_models.py  0004_updated_add_field_to_every_models_fix.py  0005_add_index_to_updated_at_field_to_all_models.py  0006_suspitious.py
django_admin/movies/templatetags/: i18n_switcher.py
django_admin/requirements/: base.txt
django_admin/templates/admin/: base_site.html
move_from_sqlite/: backoff.py  content_schema.sql  db_settings.py  load_data.py  logger.py  transfer_to_psql.py
