[project]
name = "airflow-demo"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "apache-airflow>=3.1.1",
    "apache-airflow-providers-common-sql>=1.28.2",
    "apache-airflow-providers-postgres>=6.4.0",
    "apache-airflow-providers-telegram>=4.8.3",
    "elasticsearch>=9.1.1",
]
