[project]
name = "airflow-demo"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "apache-airflow>=3.2.2",
    "apache-airflow-providers-common-sql>=2.0.1",
    "apache-airflow-providers-http>=6.0.4",
    "apache-airflow-providers-postgres>=6.7.1",
    "apache-airflow-providers-telegram>=4.9.5",
    "elasticsearch>=9.4.1",
]
