[project]
name = "django-admin"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
    "django==3.1",
    "django-debug-toolbar>=3.2.4",
    "django-filter>=21.1",
    "django-model-utils>=4.2.0",
    "djangorestframework>=3.15.1",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.1",
]
